--- a/.github/workflows/release-zenodo-deposit.yml
+++ b/.github/workflows/release-zenodo-deposit.yml
@@ -2,10 +2,10 @@ name: Deposit on Zenodo
 on:
   workflow_call:
     secrets:
-      # ZENODO_SANDBOX_ACCESS_TOKEN:
-      #   required: true
-      ZENODO_ACCESS_TOKEN:
+      ZENODO_SANDBOX_ACCESS_TOKEN:
         required: true
+      # ZENODO_ACCESS_TOKEN:
+      #   required: true
 jobs:
   zenodo_publish:
     name: Publish on Zenodo
@@ -35,7 +35,7 @@ jobs:
       - name: Get collection id
         id: collectionid
         run: |
-          COLLECTION_ID=$(DOI=${{ env.CURRENT_DOI }} ZENODO_SANDBOX=false python ./.github/scripts/get_zenodo_collection.py)
+          COLLECTION_ID=$(DOI=${{ env.CURRENT_DOI }} ZENODO_SANDBOX=true python ./.github/scripts/get_zenodo_collection.py)
           echo "The collection id is ${COLLECTION_ID}"
           echo "COLLECTION_ID=$COLLECTION_ID" >> $GITHUB_ENV
 
@@ -44,14 +44,15 @@ jobs:
         uses: korvoj/zenodraft-action@main
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          # ZENODO_SANDBOX_ACCESS_TOKEN: ${{ secrets.ZENODO_SANDBOX_ACCESS_TOKEN }}
-          ZENODO_ACCESS_TOKEN: ${{ secrets.ZENODO_ACCESS_TOKEN }}
+          ZENODO_SANDBOX_ACCESS_TOKEN: ${{ secrets.ZENODO_SANDBOX_ACCESS_TOKEN }}
+          # ZENODO_ACCESS_TOKEN: ${{ secrets.ZENODO_ACCESS_TOKEN }}
         with:
           compression: zip
           metadata: .zenodo.json
           publish: false
           upsert-doi: true
           upsert-location: doi
-          sandbox: false
+          # sandbox: false
+          sandbox: true
           verbose: true
           collection: ${{ env.COLLECTION_ID }} # Docs: https://github.com/marketplace/actions/zenodraft#collection
